add same functionality to windows phone, which will not render cesium in emulator apparently

--- a/ControlSurface/ControlSurface.WindowsPhone/MainPage.xaml
+++ b/ControlSurface/ControlSurface.WindowsPhone/MainPage.xaml
@@ -9,6 +9,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <WebView x:Name="viewer"></WebView>
+        <Button x:Name="load" Click="load_Click">Load</Button>
     </Grid>
 </Page>
